﻿===== Hasor-Core v2.5.1 (2016-11-?)
* 新增:
    01.新增 JFina 插件支持。
    02.AppContext 新增两个 justInject 方法用于对某个标记了 Hasor 注解的对象执行依赖注入。
* 改进:
    01.Spring sechma 升级到 2.5.1.
    02.Hasor 在启动的时候可以从外面传递 Map 来指定环境变量了。之前只能通过 env.config 来指定环境变量。
    03.增加 WebHasor 类，继承自 Hasor 类提供方便的 WebAppContext 初始化入口。

===== Hasor-Core v2.5.0 (2016-10-26)
* 新增:
    01.新增 ClassAwareProvider、InfoAwareProvider 两个工具类。
    02.Hasor 新增一个 autoAware 方法的重载。
    03.新增 Hasor 和 Junit 的整合，通过 Junit 做 Hasor 单元测试更加方便了。
    04.ApiBinder 接口新增 getBindInfo、findBindingRegister 两组共计4个方法，现在 init 期间也可以查询其他模块注册的 Bean 了。
    05.BeanBuilder 接口增加 getBindInfo、findBindingRegister 两组共计4个方法。其子类加以实现。
    06.AppContext 的 getBindInfo、findBindingRegister 方法实现沉降到 BeanBuilder 实现类中。
* 改进:
    01.升级依赖 slf4j-api 到 1.7.21 版本。
    02.删除 ContextEvent_Initialized 事件，该事件等同于 Module 的 loadModule。
    03.ContextShutdownListener、ContextStartListener两个内部接口提升为 Hasor Api接口。
    04.findModules 过程提升到 doInitialized 之前。
    05.改进 BeanContainer 使其可以实时检测 ApiBinder 使用期间出现的 id 冲突等问题。而不是等待 init 后期最统一检测。

===== Hasor-Core v2.4.6 (2016-10-07)
* 新增:
    01.restful插件增加,json; 拦截。
    02.WebEnvironment、WebAppContext可以被依赖注入了。
    03.所有接口类型参数传入,都走 AppContext 获取。
    04.upload包变更。
    05.新增 WebAppContext.HTTP_BEFORE_REQUEST 和 WebAppContext.HTTP_AFTER_RESPONSE 事件。
    06.新增了 ScopeManager 接口用于优化 Scope 的注册。
* 改进:
    01.改进 RenderData 接口使其更加人性化一点。
    02.RenderData 的数据不在保存在自己独立的 map 中而是共同 Request Attr。
    03.@ValidBy 注解支持配置多个表单验证器。
* 修复:
    01.fix restful插件,action方法中无法传入 response 的问题。

===== Hasor-Core v2.4.5 (2016-09-29)
* 新增:
    01.BindInfo 新增 setMetaData 方法以设置元信息。
    02.BindInfo 新增 removeMetaData 删除元数据的方法。
    03.BizCommon 包增加 log 工具。
    04.Spring 集成插件,新增支持将 Spring 容器中的 属性配置文件导入 Hasor 作为环境变量。
    05.@InjectSettings 注解支持通过 "${xxx}" 形式解析并注入环境变量了。(至此注入环境变量不再需要通过 hasor 配置文件中转)
* 改进:
    01.JSON 包简化了对 Log 的输出处理,减少了 5 个日志相关类。
    02.Spring集成时,支持通过 Spring 方式来指定 Hasor 的配置文件。
    03.Spring集成下,env.config 将会失效,环境配置属性需要通过 Spring导入。